# ru-calque-libs

./: Cargo.toml
rc-authn/: Cargo.toml
rc-authn/src/: lib.rs
rc-db/: Cargo.toml
rc-db/src/: lib.rs
rc-gram/: Cargo.toml
rc-gram/data/: SOURCES.md  egp.jsonl
rc-gram/examples/: questions.rs
rc-gram/src/: lib.rs
rc-gram/tools/: build_egp.py
rc-http/: Cargo.toml
rc-http/src/: lib.rs
rc-lex/: Cargo.toml
rc-lex/data/: SOURCES.md  lexicon.tsv
rc-lex/src/: lib.rs
rc-lex/tools/: build_lexicon.py
rc-lexpred/: Cargo.toml  README.md  clippy.toml
rc-lexpred/src/: compact.rs  concept.rs  config.rs  error.rs  lib.rs  observe.rs  predict.rs  report.rs  requirement.rs  scorer.rs  state.rs  update.rs
rc-lexpred/tests/: e2e.rs
rc-lexpred/tests/fixtures/: prod_interview_prep.json  rent_and_responsibility.json
rc-lexpred/tests/golden/: prod_interview_prep.txt  rent_and_responsibility.txt
rc-testkit/: Cargo.toml
rc-testkit/keys/: es256_private.pem  es256_public.pem
rc-testkit/src/: lib.rs
