[workspace]
resolver = "2"
members = ["rc-http", "rc-authn", "rc-db", "rc-lex", "rc-lexpred", "rc-testkit"]

# Общие библиотеки Rust-сервисов ru-calque. Убирают дубль client-side JWT, HTTP-ошибок,
# раннера миграций и тест-стенда. Подключаются git-зависимостью с пиннингом по тегу:
#   rc-authn = { git = "https://github.com/ru-calque-app/ru-calque-libs", tag = "v0.1.0" }
[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ru-calque-app/ru-calque-libs"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
axum = { version = "0.7", default-features = false, features = ["http1", "tokio", "json"] }
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4", "serde"] }
# `serde` нужен rc-lexpred: состояние ученика сериализуется вместе с временными метками.
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "macros"] }
tracing = "0.1"
tokio = { version = "1", features = ["net", "rt-multi-thread", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
wordnet-lemmatizer = "0.1"
# Стемминг для словообразовательных семейств (rc-lexpred): детерминированный, без данных.
rust-stemmers = "1"
