[package]
name = "rc-http"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Общие HTTP-примитивы ru-calque: AppError (RFC 9457) + health."

[dependencies]
axum.workspace = true
serde.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
