[package]
name = "rc-testkit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Тест-стенд ru-calque: schema-per-test изоляция Postgres + подпись токенов встроенной ES256-фикстурой."

[dependencies]
rc-db = { path = "../rc-db" }
axum.workspace = true
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
jsonwebtoken.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio.workspace = true
